--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -1,5 +1,6 @@
 FROM rust:1.48-slim-buster
 
+ENV CARGO_TARGET_DIR=/tmp/cargo-target
 RUN rustup component add rustfmt clippy
 # 'libssl-dev' and 'pkg-config' are useful for compilation of Rust crate
 # 'openssl-sys' which is used by 'cargo-audit'. Once compiled and installed,
