--- a/tartare/Dockerfile
+++ b/tartare/Dockerfile
@@ -23,9 +23,9 @@ RUN BUILD_DEPENDENCIES="apt-transport-https curl gnupg-agent software-properties
     && apt-get autoremove -y \
     && rm -rf /var/lib/apt/lists/*
 
-# something during the black installation does not handle PIP_TARGET correctly, so we use a virtualenv
-# Note: the virtual env has wide persmissions since we don't know the user jenkins will use
+# the virtual env has wide permissions since we don't know the user jenkins will use
 ENV VIRTUAL_ENV=/tmp/venv
+ENV MYPY_CACHE_DIR=/tmp/mypy
 ENV PRE_COMMIT_HOME=/tmp/precommit
 RUN python3 -m venv $VIRTUAL_ENV
 ENV PATH="$VIRTUAL_ENV/bin:$PATH"
