Install rust "system-wide" like official docker image + recent git
git >= 2.18 is required for submodule management in github actions

Also fix a typo

--- a/rust/Dockerfile
+++ b/rust/Dockerfile
@@ -1,33 +1,43 @@
-FROM debian:stretch
+FROM debian:stretch-backports
 
 # Generic tools
 RUN apt update \
-    && apt install --yes build-essential git \
+    && apt install --yes build-essential git-man/stretch-backports git/stretch-backports \
+    && git --version \
     && apt autoremove --yes \
     && rm -rf /var/lib/apt/lists/*
 
-# install rustup
+ENV RUSTUP_HOME=/usr/local/rustup \
+    CARGO_HOME=/usr/local/cargo
+
+# install rustup for all users (inspired by rust official image Dockerfile)
+ENV PATH=/usr/local/cargo/bin:${PATH}
 RUN apt update \
     && apt install --yes curl \
-    && curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y \
+    && curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --no-modify-path --profile minimal \
+    && chmod -R a+w ${RUSTUP_HOME} ${CARGO_HOME} \
+    && rustup --version \
+    && cargo --version \
+    && rustc --version \
     && apt purge --yes curl \
     && apt autoremove --yes \
     && rm -rf /var/lib/apt/lists/*
-ENV PATH "/root/.cargo/bin:$PATH"
 
-# For Rust
-RUN rustup component add rustfmt clippy
+# Rust tools
+RUN rustup component add rustfmt clippy \
+    && chmod -R a+w ${RUSTUP_HOME} ${CARGO_HOME}
+
 # 'libssl-dev' and 'pkg-config' are useful for compilation of Rust crate
 # 'openssl-sys' which is used by 'cargo-audit'. Once compiled and installed,
 # only the library 'libssl1.1' is needed.
-
 ARG AUDIT_BUILD_DEPENDENCIES="libssl-dev pkg-config"
 RUN apt update \
     && apt install --yes libssl1.1 ca-certificates ${AUDIT_BUILD_DEPENDENCIES}\
     && cargo install cargo-audit \
+    && chmod -R a+w ${RUSTUP_HOME} ${CARGO_HOME} \
     && apt -y purge ${AUDIT_BUILD_DEPENDENCIES} \
     && apt autoremove --yes \
-    && rm -rf /var/lib/apt/lists/*git 
+    && rm -rf /var/lib/apt/lists/*
 
 # we also install docker to be able to release the project on a docker registry
 ARG DOCKER_BUILD_DEPENDENCIES="apt-transport-https curl gnupg-agent software-properties-common"
@@ -41,7 +51,7 @@ RUN apt update \
     && add-apt-repository --remove "deb [arch=amd64] https://download.docker.com/linux/debian $(lsb_release -cs) stable" \
     && apt -y purge ${DOCKER_BUILD_DEPENDENCIES} \
     && apt autoremove --yes \
-    && rm -rf /var/lib/apt/lists/*git 
+    && rm -rf /var/lib/apt/lists/*
 
 ENV CARGO_HOME=/tmp/cargo
 ENV CARGO_TARGET_DIR=/tmp/cargo-target
