Fix: RUNTIME_DEPENDENCIES scope for all
Also remove useless CARGO_HOME now that read-write access is given
Also explicitely add and document 'libsqlite3-0' as deps

--- a/proj/Dockerfile
+++ b/proj/Dockerfile
@@ -1,13 +1,8 @@
+ARG RUNTIME_DEPENDENCIES="clang libtiff5 libcurl3-nss libsqlite3-0"
+
 FROM debian:stretch as builder
-
+ARG RUNTIME_DEPENDENCIES
 ARG PROJ_VERSION="7.2.1"
-
-# For running `proj`, the following Debian packages are needed:
-# - 'clang' provides 'llvm-config', 'libclang.so' and 'stddef.h' needed for compiling 'proj-sys'
-# - 'libtiff5' provides 'libtiff.so', needed for linking when 'proj-sys' is used
-# - 'libcurl3-nss' provides 'libcurl-nss.so', needed for linking when 'proj-sys' is used
-# - 'proj' provides 'proj.h' and 'libproj.so', needed for compiling 'proj-sys' (installed manually below)
-ARG RUNTIME_DEPENDENCIES="clang libtiff5 libcurl3-nss"
 
 # For building `libproj' and the Rust's crate `proj-sys`, the following Debian packages are needed:
 ENV BUILD_DEPENDENCIES="libcurl4-nss-dev libsqlite3-dev libtiff5-dev cmake pkg-config sqlite3 wget"
