--- a/tartare/Dockerfile
+++ b/tartare/Dockerfile
@@ -2,7 +2,7 @@ FROM python:3.6.5-slim-stretch
 
 ARG DOCKER_VERSION="5:19.03.13~3-0~debian-stretch"
 
-RUN BUILD_DEPENDENCIES="apt-transport-https curl gnupg-agent software-properties-common" \
+RUN BUILD_DEPENDENCIES="apt-transport-https gnupg-agent software-properties-common" \
     && apt-get update \
     && apt-get --yes install \
         # used in docker_wrapper.py for waiting until a container is up (wiremock)
@@ -11,6 +11,8 @@ RUN BUILD_DEPENDENCIES="apt-transport-https curl gnupg-agent software-properties
         # used for precommit checks
         git \
         ca-certificates \
+        # used for db integrity check
+        curl \
         ${BUILD_DEPENDENCIES} \
     && curl -fsSL https://download.docker.com/linux/debian/gpg | apt-key add \
     && add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/debian $(lsb_release -cs) stable" \
