--- a/rust/proj/Dockerfile
+++ b/rust/proj/Dockerfile
@@ -3,7 +3,7 @@ ARG PROJ_VERSION=7.2.1
 FROM kisiodigital/proj-ci:${PROJ_VERSION}-artifacts as proj-artifacts
 FROM kisiodigital/rust-ci:${TAG}
 
-ARG RUNTIME_DEPENDENCIES="clang libclang1-3.9 pkg-config libtiff5 libcurl3-nss libsqlite3-0"
+ARG RUNTIME_DEPENDENCIES="clang-3.9 pkg-config libtiff5 libcurl3-nss libsqlite3-0"
 COPY --from=proj-artifacts /proj-artifacts /
 RUN apt update \
     && apt install --yes curl ${RUNTIME_DEPENDENCIES} \
